deploy/kubernetes/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
  labels:
    app: frontend
spec:
  serviceName: app
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: epicstory-app:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
